# woofer

./: Cargo.toml
assets/: body.glb  right_arm.glb  right_shoulder.glb
crates/controller/: Cargo.toml
crates/controller/assets/: right_wrist.glb
crates/controller/src/: main.rs
crates/device/: Cargo.toml
crates/device/src/: main.rs
src/: lib.rs  main.rs
