[package]
name = "woofer-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.24"
reqwest-eventsource = "0.5.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
woofer = { path = "../.." }
bevy = "0.13.0"
visualizer = { path = "../../../visualizer" }
