[package]
name = "woofer-device"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tower-http = "0.5.2"
tracing-subscriber = "0.3.18"
woofer = { path = "../.." }
